third_party/move/move-compiler-v2/tests/ability-check/v1-borrow-tests/return_type_mismatch_and_unused_resource.exp

Diagnostics:
error: cannot return a reference derived from value since it is not based on a parameter
   ┌─ tests/ability-check/v1-borrow-tests/return_type_mismatch_and_unused_resource.move:13:9
   │
12 │         let r = &u;
   │                 -- value previously borrowed here
13 │         r
   │         ^ return attempted here
